# exercise

./: CMakeLists.txt  a.out  ex_string.cc  ex_string_test.cc  ex_swap.h  ex_swap_test.cc  partial-specialization.cc  string.cc  string.h  string_test.cc  test.cc
boost/: implicit_cast.cc
c++/c++11/: final&override.cc  function&bind.cc  net.c  net.h  test.cc  vector_pair.cc
c++/inline/: README  a.out  head.h  main.c  main.cc  source.c
c++11/: SFINAE.cc  vector_pair.cc
concurrency/: concu.c  definition.cc  net.h  producer_comsumer.cpp  question_1.cc  question_2.cc  rwlock.c  rwlock.cc  test.c
data_structure/: ex_string.h  ex_string_test.cc  ex_swap_test.cc
debug-tools/gdb/: Core_file_test.cc  Util.h  a.out  variable_condition.cc
debug-tools/gdb/a.out.dSYM/Contents/Resources/DWARF/: a.out
debug-tools/gtest/: TEST.cc  TEST_F.cc  TEST_P.cc  TYPED_TEST_P.cc  _DEATH.cc  a.out  assert.cc  environment.h
debug-tools/valgrind/: Helgrind_test.cc  Memcheck_test.cc  a.out  callgrind.out.20194  callgrind_test_part1.cc  callgrind_test_part2.cc
design_pattern/: a.out  strategy.cc  strategy.h
ipc/: Util.h  posix_shm.cc
network/: anon_mmap.c  client  client.c  eof.c  epoll.c  mmap.c  net.c  net.h  nonblock_connect.c  run.sh  server  server.c  signalfd.c  sleep1.c  sync_using_signal.c  test.c
operating system/: eventfd_test.c  net.c  net.h  signalfd_test.c  timerfd_test.c
template/: partial-specialization.cc  specializion_of_a_class_member.cc  static_assert.cc
